k3s/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: alex-n8n
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
